--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -247,7 +247,7 @@
                     android:layout_width="0dp"
                     android:layout_height="80dp"
                     android:layout_weight="1"
-                    android:text="8. Addition till 9"
+                    android:text="8. Division"
                     android:textSize="22sp"
                     android:textStyle="bold"
                     android:background="@android:color/transparent"
@@ -714,59 +714,7 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
-        <!-- Card 26: Equal Share, Equal Group -->
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
-            app:cardCornerRadius="24dp"
-            app:cardElevation="7dp"
-            app:cardBackgroundColor="#E0F7FA">
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical">
 
-                <Button
-                    android:id="@+id/btn26"
-                    android:layout_width="0dp"
-                    android:layout_height="80dp"
-                    android:layout_weight="1"
-                    android:text="26. Equal Share, Equal Group"
-                    android:textSize="22sp"
-                    android:textStyle="bold"
-                    android:background="@android:color/transparent"
-                    android:textColor="#00838F"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-        <!-- Card 27: Mathematical Quizzes -->
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="40dp"
-            app:cardCornerRadius="24dp"
-            app:cardElevation="7dp"
-            app:cardBackgroundColor="#F8BBD0">
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical">
-
-                <Button
-                    android:id="@+id/btn27"
-                    android:layout_width="0dp"
-                    android:layout_height="80dp"
-                    android:layout_weight="1"
-                    android:text="27. Mathematical Quizzes"
-                    android:textSize="22sp"
-                    android:textStyle="bold"
-                    android:background="@android:color/transparent"
-                    android:textColor="#AD1457"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
 
 
     </LinearLayout>
