--- a/app/src/main/res/layout/activity_shape.xml
+++ b/app/src/main/res/layout/activity_shape.xml
@@ -26,7 +26,7 @@
         android:textSize="18sp"
         android:textColor="#4A148C"
         android:textStyle="bold"
-        android:layout_marginTop="24dp" />
+        android:layout_marginTop="40dp" />
 
 
     <!-- Object to Match -->
@@ -34,7 +34,7 @@
         android:id="@+id/objectImage"
         android:layout_width="140dp"
         android:layout_height="140dp"
-        android:layout_below="@id/title"
+        android:layout_below="@id/feedbackText"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:src="@drawable/apple1"
