--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="🔢 चढता आणि उतरता क्रम"
+        android:text="🔢 Accending And Decending form"
         android:textSize="22sp"
         android:textColor="#BF360C"
         android:textStyle="bold"
@@ -30,7 +30,7 @@
         android:id="@+id/btnAsc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="📈 चढता क्रम पाहा"
+        android:text="📈 Acending form"
         android:textSize="18sp"
         android:backgroundTint="#B2EBF2"
         android:textColor="#000000"
@@ -40,7 +40,7 @@
         android:id="@+id/btnDesc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="📉 उतरता क्रम पाहा"
+        android:text="📉 Decending form"
         android:textSize="18sp"
         android:backgroundTint="#FFE0B2"
         android:textColor="#000000"
@@ -50,7 +50,7 @@
         android:id="@+id/tvResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="उत्तर येथे दिसेल"
+        android:text="see Answear here"
         android:textSize="20sp"
         android:textColor="#000000"
         android:textStyle="bold" />
@@ -59,7 +59,7 @@
         android:id="@+id/btnNewSet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="🔁 नवीन आकडे"
+        android:text="🔁 Next Numbers"
         android:textSize="16sp"
         android:layout_marginTop="30dp"
         android:backgroundTint="#AED581"
