--- a/app/src/main/res/layout/activity_compare_images.xml
+++ b/app/src/main/res/layout/activity_compare_images.xml
@@ -17,7 +17,7 @@
             android:id="@+id/tvInstruction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="🔍 वस्तू ओळखा"
+            android:text="🔍 Identify Items"
             android:textSize="22sp"
             android:textStyle="bold"
             android:textColor="#BF360C"
@@ -60,7 +60,7 @@
             android:id="@+id/tvResult"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="उत्तर येथे दिसेल"
+            android:text="Answear showing here"
             android:textSize="18sp"
             android:textColor="#000000"
             android:layout_marginTop="20dp" />
@@ -70,7 +70,7 @@
             android:id="@+id/btnNew"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="नवीन प्रश्न"
+            android:text="Next"
             android:textSize="18sp"
             android:backgroundTint="#FFB74D"
             android:textColor="#000000"
