--- a/app/src/main/res/layout/activity_time.xml
+++ b/app/src/main/res/layout/activity_time.xml
@@ -5,7 +5,7 @@
     android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F8F"
+    android:background="@drawable/bckg"
     android:padding="16dp"
     tools:context=".TimeActivit">
 
@@ -20,7 +20,7 @@
 
         android:textColor="@color/black"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="30dp"/>
 
     <!-- Buttons -->
 
@@ -46,7 +46,7 @@
         android:id="@+id/btnLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_marginTop="600dp"
         android:orientation="horizontal"
         android:gravity="center">
 
